All state and covariance equations

--- a/documents/CameraModel.tex
+++ b/documents/CameraModel.tex
@@ -19,6 +19,7 @@
         \right]}
 
         %% Miscelaneous commands
+        \newcommand{\pvec}[1]{\vec{#1}\mkern2mu\vphantom{#1}}
         
         %% Tool tracking positions
         \newcommand{\xbT}{\bf{x}{^b_T}} % tool tip in body coords
