--- a/documents/final.tex
+++ b/documents/final.tex
@@ -1,4 +1,4 @@
-\documentclass{report}
+\documentclass{article}
 \usepackage{pdfpages}
 
 \usepackage[english]{babel}
@@ -16,6 +16,63 @@
 				\end{array} 
 		\right]}
 
+	\newcommand{\crossmat}[1]{\mat{#1{^X}}}
+
+	\newcommand{\pvec}[1]{\vec{#1}\mkern2mu\vphantom{#1}}
+
+    % Position vector macros
+    \newcommand{\pspr}{\pvec{p}'_s} % position of the tool sphere (display)
+    \newcommand{\ps}{\pvec{p}_s} % position of the tool rear (inertial)
+
+    \newcommand{\prpr}{\pvec{p}'_r} % position of the tool rear (display)
+    \newcommand{\pr}{\pvec{p}_r} % position of the tool rear (inertial)
+
+    \newcommand{\pfpr}{\pvec{p}'_f}
+    \newcommand{\pf}{\pvec{p}_f}
+
+    \newcommand{\pc}{\pvec{p}_c}
+    \newcommand{\pd}{\pvec{p}_d}
+
+    % Attitude macros
+    \newcommand{\Ad}{\mathbf{A}_d} % attitude of the display
+    \newcommand{\Ac}{\mathbf{A}_c} % attitude of the camera
+    \newcommand{\At}{\mathbf{A}_t} % attitude of the tool
+    \newcommand{\Atpr}{\mathbf{A}'_t} % attitude of the tool
+
+    \newcommand{\Adinv}{\mathbf{A}^{-1}_d} % attitude of the display
+    \newcommand{\Acinv}{\mathbf{A}^{-1}_c} % attitude of the camera
+    \newcommand{\Atinv}{\mathbf{A}^{-1}_t} % attitude of the tool
+
+    % Quaternion macros
+	\newcommand{\q}{\overline{\mathbf{q}}}
+	\newcommand{\dq}{\overline{\delta \vec{q}}}
+	\newcommand{\qc}{\q_c}
+	\newcommand{\qd}{\q_d}
+	\newcommand{\qt}{\q_t}
+
+	% Covariance matrix macros
+	\newcommand{\Pac}{\mathbf{P}_{ac}}
+	\newcommand{\Pad}{\mathbf{P}_{ad}}
+	\newcommand{\Pat}{\mathbf{P}_{at}}
+
+	\newcommand{\Pacpr}{\mathbf{P}'_{ac}}
+	\newcommand{\Padpr}{\mathbf{P}'_{ad}}
+	\newcommand{\Patpr}{\mathbf{P}'_{at}}
+
+	\newcommand{\Pps}{\mathbf{P}_{ps}}
+	\newcommand{\Ppr}{\mathbf{P}_{pr}}
+	\newcommand{\Ppf}{\mathbf{P}_{pf}}
+	\newcommand{\Ppc}{\mathbf{P}_{pc}}
+	\newcommand{\Ppd}{\mathbf{P}_{pd}}
+
+	\newcommand{\Ppspr}{\mathbf{P}'_{ps}}
+	\newcommand{\Pprpr}{\mathbf{P}'_{pr}}
+	\newcommand{\Ppfpr}{\mathbf{P}'_{pf}}
+
+	\newcommand{\el}{\vec{l}}
+
+
+
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 %% TITLE PAGE
@@ -23,14 +80,14 @@
 
 \begin{document}
 % https://en.wikibooks.org/wiki/LaTeX/Title_Creation
-\begin{titlepage}
+% \begin{titlepage}
 
 	\title{The 3D Interaction Tool: A Pointing Device for Virtual Reality Applications}
 	\author{Lukas Gemar}
 	\date{March 26, 2016}
 	\maketitle
 
-\end{titlepage}
+% \end{titlepage}
 
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
@@ -41,10 +98,98 @@
 The 3D Interaction Tool is a hand-held device that enables a user to interact with virtual reality applications. Since both the position and orientation of the tool are tracked, user input with the tool accomplishes tasks such as selecting, translating, and rotating three-dimensional objects, or free-hand drawing in space. The tool¿s position is tracked by a software application that filters observations from a camera attached to the virtual reality display, and the orientation is found by means of observations from an inertial measurement unit attached to the tool itself. Simple computer-aided design and drawing applications demonstrate the capabilities of the 3D Interaction Tool. 
 \end{abstract}
 
-
 \begin{flushleft}
 
-Hello world.
+\section{Introduction}
+\subsection{Nomenclature}
+
+% Position vector definitions
+\textbf{Position vectors definitions in the inertial coordinate frame}: \\
+$ \ps \equiv $ position of the spherical tracking target on tool rear \\
+$ \pr \equiv $ position of the tool rear \\
+$ \pf \equiv $ position of the tool front \\
+$ \pc \equiv $ position of the tracking camera \\
+$ \pd \equiv $ position of the virtual reality display \\
+
+\medskip
+
+% Rotated position vector definitions
+\textbf{Rotated position vectors}: \\
+$ \pspr \equiv $ position of the spherical tracking target on tool rear, camera coordinates \\
+$ \prpr \equiv $ position of the tool rear in display coordinates \\
+$ \pfpr \equiv $ position of the tool front in display coordinates \\
+
+\medskip
+
+% Attitude matrix definitions
+\textbf{Attitude matrices}: \\
+$ \Ac \equiv $ attitude of the tracking camera \\
+$ \Ad \equiv $ attitude of the virtual reality display \\
+$ \At \equiv $ attitude of the interaction tool \\
+$ \Atpr \equiv $ attitude of the interaction tool in display coordinates \\
+
+\medskip
+
+% Quaternion definitions
+\textbf{Body-referenced quaternion representations of attitude}: \\
+$ \qc \equiv $ attitude of the tracking camera \\
+$ \qd \equiv $ attitude of the virtual reality display \\
+$ \qt \equiv $ attitude of the interaction tool \\
+
+\medskip
+
+% Covariance definitions
+\textbf{Position error covariances in inertial coordinate frame}: \\
+$ \Pps \equiv $ covariance of spherical tracking target position \\
+$ \Ppr \equiv $ covariance of the position of the rear of the interaction tool\\
+$ \Ppf \equiv $ covariance of the position of the front of the interaction tool\\
+$ \Ppc \equiv $ covariance of the position of the tracking camera \\
+$ \Ppd \equiv $ covariance of the position of the virtual reality display \\
+
+\medskip
+
+\textbf{Attitude error covariances in the inertial coordinate frame}: \\
+$ \Pac \equiv $ covariance of the tracking camera attitude quaternion error \\
+$ \Pad \equiv $ covariance of the display attitude quaternion error \\
+$ \Pat \equiv $ covariance of the interaction tool attitude quaternion error \\
+
+\medskip
+
+\textbf{Position error covariances in rotated body coordinates}: \\
+$ \Ppspr \equiv $ covariance of the sphereical tracking target position \\
+$ \Pprpr \equiv $ covariance of the position of the rear of the interaction tool \\
+$ \Ppfpr \equiv $ covariance of the position of the front of the interaction tool \\
+
+\medskip
+
+\textbf{Attitude error covariances in the rotated body coordinates}: \\
+$ \Pacpr \equiv $ covariance of the tracking camera attitude angular error \\
+$ \Padpr \equiv $ covariance of the display attitude angular error \\
+$ \Patpr \equiv $ covariance of the interaction tool attitude angular error \\
+
+\section{Tool Model}
+
+\subsection{Tool position and attitude}
+There are three tracking targets: $\pf$, $\pfpr$, and $\Atpr$. The vector $\pf$ tracks the trajectory of the front of the interaction tool in inertial coordinates. Tracking $\pf$ is required in order to preserve information about where the tool has been after the tracking camera has rotated. In order to render the position of the tool on the virtual reality application, the vector $\pfpr$, the position of the tool in display coordinates, is found by the following equation: $\pfpr = \Ad ( \pf + \pd )$. In order to render the orientation of the tool in the VR environment, the attitude of the tool in display coordinates is found by the product $\Atpr$.
+
+\medskip
+
+The tracking targets are not measured directly, but they are inferred from measurements of $\pspr$, $\Ac$, $\Ad$, $\At$, $\pc$ and $\pd$. 
+
+% Position and attitude equations
+$$ \pr = \Acinv \pspr - \pc $$
+$$ \pf = \pr + \Atinv \el $$
+$$ \pfpr = \Ad (\pf + \pd) $$
+$$ \Atpr = \Ad \Atinv \el $$
+
+% Covariance equations
+$$ \Pprpr = \Ppspr + \crossmat{\pspr} \Pacpr \crossmat{\pspr}^T $$
+$$ \Ppr = \Acinv ( \Ppspr + \crossmat{\pspr} \Pacpr \crossmat{\pspr}^T ) (\Acinv)^T + \Ppc $$
+$$ \Ppf = \Ppr + \Atinv \crossmat{\el} \Patpr \crossmat{\el}^T (\Atinv)^T $$
+$$ \Ppfpr = \Ad ( \Ppf + \Ppd ) \Ad{^T} $$
+$$ \Ppfpr = \Ppspr + \crossmat{\pspr} \Pacpr \crossmat{\pspr}^T + \Atpr \crossmat{\el} \Patpr \crossmat{\el}^T (\Atpr)^T + 2\Ad\Ppd\Ad{^T} $$
+        
+
 
 
 \bibliographystyle{unsrt}
