Almost done with introduction section

--- a/documents/references.bib
+++ b/documents/references.bib
@@ -47,3 +47,12 @@
   year={2004}
 }
 
+@misc{Bloomberg-01-13,
+  author = {Julie Verhage},
+  title = {{Goldman Sachs Has Four Charts Showing the Huge Potential in Virtual and Augmented Reality}},
+  year = 2016,
+  howpublished = {\url{http://www.bloomberg.com/news/articles/2016-01-13/goldman-sachs-has-four-charts-showing-the-huge-potential-in-virtual-and-augmented-reality}},
+  note = {Accessed: 2016-03-19},
+}
+
+
