--- a/documents/final.tex
+++ b/documents/final.tex
@@ -4,7 +4,9 @@
 \usepackage[english]{babel}
 % \usepackage[utf8]{inputenc}
 \usepackage{inputenc}
-\usepackage{graphicx}
+\usepackage{url}
+
+\usepackage{hyperref}
 \graphicspath{ {images/final/} }
 
 \usepackage[nottoc]{tocbibind}
@@ -100,8 +102,7 @@ The 3D Interaction Tool is a hand-held device that enables a user to interact wi
 
 \begin{flushleft}
 
-\section{Introduction}
-\subsection{Nomenclature}
+\section{Nomenclature}
 
 % Position vector definitions
 \textbf{Position vectors definitions in the inertial coordinate frame}: \\
@@ -167,14 +168,65 @@ $ \Pacpr \equiv $ covariance of the tracking camera attitude angular error \\
 $ \Padpr \equiv $ covariance of the display attitude angular error \\
 $ \Patpr \equiv $ covariance of the interaction tool attitude angular error \\
 
-\section{Tool Model}
+\section{Introduction}
 
-\subsection{Tool position and attitude}
-There are three tracking targets: $\pf$, $\pfpr$, and $\Atpr$. The vector $\pf$ tracks the trajectory of the front of the interaction tool in inertial coordinates. Tracking $\pf$ is required in order to preserve information about where the tool has been after the tracking camera has rotated. In order to render the position of the tool on the virtual reality application, the vector $\pfpr$, the position of the tool in display coordinates, is found by the following equation: $\pfpr = \Ad ( \pf + \pd )$. In order to render the orientation of the tool in the VR environment, the attitude of the tool in display coordinates is found by the product $\Atpr$.
+\subsection{Motivation: Direct input for VR}
+
+As much as \$25 billion could be spent on virtual reality (VR) and augmented reality (AR) software applications by 2025 \cite{Bloomberg-01-13}. There are two primary modes of user-input that are possible for these applications: indirect and direct. Indirect input devices translate the user's physical movements into the motion of a virtual cursor by means of a fixed transformation. Common examples of indirect input devices are a mouse or joystick. Direct input devices also translate physical to virtual movements, but this transformation is one-to-one. For example, a touch screen is a direct input device because the physical location of the user's press is colocated with the virtual click. 
 
 \medskip
 
-The tracking targets are not measured directly, but they are inferred from measurements of $\pspr$, $\Ac$, $\Ad$, $\At$, $\pc$ and $\pd$. 
+With the advent of virtual reality applications the following question must be answered: which of these input paradigms -- indirect or direct -- will prove most useful for interacting with virtual reality applications? While indirect input devices have achieved widespread popularity for two-dimensional displays, the direct input paradigm for VR applications embraces the immersiveness of VR experiences by enabling intuitive interactions for users. Direct input devices allow users to reach out and interact with the objects of their virtual space, just as they would with objects in their physical space. 
+
+\subsection{Requirements: Device tracking system}
+
+In order to enable direct input with the interaction tool, the tool's tracking system must estimate both the position and orientation of the interaction tool. Additionally, rendering a virtual representation of the tool requires measuring its position and orientation relative to the virtual reality display orientation, given by the attitude matrix $\Ad$. To track the tool's absolute trajectory, its position is determined relative to the world -- that is, relative to a non-accelerating, inertial coordinate system in the user's physical environment. The position and orientation of the tool in the world coordinates of the inertial frame are $\pf$ and $\At$, respectively. The position of the tool in the coordinate frame of the virtual reality display is denoted by a 'prime' sign: the tip or front of the tool in display coordinates is $\pfpr$. Thus, there are four tracking targets: $\pf$, $\At$, $\pfpr$, and $\Ad$; these are shown in Figure \ref{fig:requirements}. 
+
+\begin{figure}
+	\begin{center}
+		\includegraphics[width=1\textwidth]{requirements}
+	\end{center}
+	\caption{Position and orientation tracking requirements}
+	\label{fig:requirements}
+\end{figure}
+
+
+\subsection{Background}
+
+\subsection{Objectives: Tool usability}
+
+The usability requirements presented in Figure \ref{fig:usability} must be met for the tool to succeed as an \textit{input} device for VR software applications.
+
+\begin{figure}
+	\begin{center}
+		\includegraphics[width=1\textwidth]{Usability}
+	\end{center}
+	\caption{Usability design objectives}
+	\label{fig:usability}
+\end{figure}
+
+\subsection{Objectives: Tool tracking performance}
+
+The performance requirements presented in Figure \ref{fig:performance} must be met for the tool to succeed as a \textit{direct} input device for VR software applications.
+
+\begin{figure}
+	\begin{center}
+		\includegraphics[width=1\textwidth]{Performance}
+	\end{center}
+	\caption{Performance design objectives}
+	\label{fig:performance}
+\end{figure}
+
+\section{Tool Tracking Model}
+
+
+\subsection{Tracking measurements}
+
+Not all of these three tracking targets are measured directly. The tracking targets are inferred from the measurements of the position of the rear of the interaction tool relative to the camera, the attitude of the camera, and the attitude of the tool. The position of the tool relative to the camera is denoted by $\pspr$, the attitude of the camera relative to the inertial coordinate system by $\Ac$ and the attitude of the tool relative to the inertial coordinate system by $\At$. The vector $\pspr$ is measured by finding the .
+
+\subsection{Inferring the tool position}
+
+\subsection{Inferring the tool attitude}
 
 % Position and attitude equations
 $$ \pr = \Acinv \pspr - \pc $$
@@ -192,7 +244,7 @@ $$ \Ppfpr = \Ppspr + \crossmat{\pspr} \Pacpr \crossmat{\pspr}^T + \Atpr \crossma
 
 
 
-\bibliographystyle{unsrt}
+\bibliographystyle{ieeetr}
 \bibliography{references}
 
 \end{flushleft}
